--- a/src/components/pages/Work/styles.module.scss
+++ b/src/components/pages/Work/styles.module.scss
@@ -1,117 +1,80 @@
 @use "functions";
 
-.wrapper {
+.itemBoxLayout {
 	display: grid;
-	align-items: center;
-	justify-items: center;
-	gap:functions.rem(24);
-	padding: 0 functions.rem(100);
-}
+	gap: functions.rem(20);
+	min-height: functions.rem(1024);
 
-.titleArea {
-	display: grid;
-	grid-template-columns: auto 1fr;
-	place-items: center;
-	width: 100%;
-}
-
-.title{
-	font-size: functions.rem(24);
-}
-
-.more {
-	display: grid;
-	place-items: end;
-	width: 100%;
-	padding: functions.rem(40) 0;
-}
-
-.sectionAreaCard {
-	display:flex;
-	width: 100%;
-	gap:functions.rem(16);
-}
-
-.itemBoxArea {
-	box-sizing: border-box;
-	padding: functions.rem(20);
-	background-color: $colorBase;
-	border: 1px solid $colorBaseDark1;
-	border-radius: functions.rem(5);
-}
-
-.itemBoxArea:hover {
-	opacity: 0.5;
-	transition: 0.3s;
+	@media (max-width: 750px) {
+		min-height: functions.rem(768);
+	}
 }
 
 .itemLink {
 	color: $colorBaseDark3;
 	text-decoration: none;
 	cursor: pointer;
+} 
+
+.itemBoxArea {
+	width: 100%;
+}
+
+.itemBoxArea:hover {
+	opacity: 0.5;
 }
 
 .itemBoxContents {
 	display: grid;
-	row-gap: functions.rem(20);
+	grid-template-columns: auto 1fr;
+	gap: functions.rem(20);
+	min-height: functions.rem(120);
+	padding: functions.rem(20);
+	background-color: rgb(255 255 255 / 60%);
+
+	@media (max-width: 750px) {
+		align-items: center;
+		justify-content: space-evenly;
+		width: 100%;
+		min-height: functions.rem(110);
+	}
 }
 
 .itemPhoto {
-	width: 100%;
+	display: grid;
+	place-items: center;
 
-	@media (max-width: 960px)  {
-		display: flex;
-		justify-content: center;
+	@media (max-width: 750px) {
+		flex: 0 0 functions.rem(80);
+		width: functions.rem(80);
+
+		> img {
+			width: functions.rem(80);
+			height: functions.rem(80);
+		}
 	}
 }
 
 .photo {
-	width: 100%;
-	height: auto;
-	aspect-ratio: 1/1;
 	object-fit: cover;
-	width: functions.rem(300);
+	border-radius: 50%;
 }
 
-.itemArea {
-	@media (max-width: 960px)  {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-}
-
-.itemDate {
-	font-weight: 400;
+.boxBottom {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	overflow: hidden;
 }
 
 .itemTitle {
-	font-weight: $fontWeightBold;
-}
+	width: auto;
+	overflow: hidden;
 
-.image {
-	position: absolute;
-	right: 0;
-	bottom: functions.rem(-100);
-	z-index: 1;
-	width: functions.rem(160);
-	aspect-ratio: 1/1;
-	animation: image 5s linear forwards;
-	animation-iteration-count: infinite;
-	animation-direction: alternate;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 
-	@media (max-width: 960px)  {
-		bottom: -1%;
-		width: functions.rem(90);
-	}
-
-	@keyframes image {
-		0% {
-			transform: translateY(0);
-		}
-
-		100% {
-			transform: translateY(functions.rem(20));
-		}
+	@media (max-width: 750px) {
+		width: auto;
 	}
 }
